# chimney-rviz-plugins

./: .gitigored  .gitmodules  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  LICENCE  README.md  auto_detect.cmake  package.xml  plugin_description.xml
include/: traits.h
include/editable_points/: EditablePoints.h
include/editable_polygon/: EditablePolygonController.h
include/polygon_painter/: PolygonMarker.h  PolygonPainter.h
include/utils/pcl/: EarClippingPatched.h
include/utils/polygon/: PolygonUtils.h
msg/: StringStamped.msg
nodes/editable_points/: README.md
nodes/editable_points/src/: EditablePoints.cpp
nodes/editable_polygon/: README.md
nodes/editable_polygon/src/: EditablePolygonController.cpp
nodes/polygon_painter/: README.md
nodes/polygon_painter/src/: PolygonMarker.cpp  PolygonPainter.cpp
nodes/utils/: README.md
nodes/utils/pcl/: EarClippingPatched.cpp
nodes/utils/polygon/: PolygonUtils.cpp
