<?xml version="1.0"?>
<package format="2">
  <name>chimney_rviz_plugins</name>
  <version>0.1.0</version>
  <description>The Chimney RViz visualize plugins implement package</description>

  <maintainer email="smallchimney@foxmail.com">Chimney Xu</maintainer>
  <author email="smallchimney@foxmail.com">Chimney Xu</author>
  <!--<url type="website">https://chimney.site/ros/rviz_plugins</url>-->

  <license>ASLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>polygon_interface_package</build_depend>
  <depend>rviz</depend>

  <exec_depend>polygon_interface_package</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
