<?xml version="1.0"?>
<package format="2">
  <name>chimney_rviz_plugins</name>
  <version>0.1.0</version>
  <description>The Chimney RViz visualize plugins implement package</description>

  <maintainer email="smallchimney@foxmail.com">Chimney Xu</maintainer>
  <author email="smallchimney@foxmail.com">Chimney Xu</author>
  <!--<url type="website">https://chimney.site/ros/rviz_plugins</url>-->

  <license>ASLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rviz</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
